--- a/style.css
+++ b/style.css
@@ -5,5 +5,7 @@ h1 {
 div {
   color: black;
   display: fixed;
-  margin-bottom: ;
+  margin-bottom: 12em;
+  background: white;
+  border: 4px solid black;
 }
