--- a/signing/sign.css
+++ b/signing/sign.css
@@ -1,4 +1,4 @@
 html {
-  background: url("backgrounds/Main.png");
+  background-image: url("https://nerdnhub.github.io/NerdnHub/backgrounds/Main.png");
   font-size: 10pt;
 }
