--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font: impact;
+  font: Impact;
 }
 html {
   background-image: url("https://nerdnhub.github.io/NerdnHub/backgrounds/Main.png");
