--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Impact", Impact;
-  font: Impact
+  font-shorthand: Impact
 }
 html {
   background-image: url("https://nerdnhub.github.io/NerdnHub/backgrounds/Main.png");
