--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,9 @@ html {
   background-image: url("https://nerdnhub.github.io/NerdnHub/backgrounds/Main.png");
   font-size: 10pt;
 }
+a {
+  color: blue;
+}
+a: hover {
+  color: purple;
+}
