--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,6 @@ a: hover {
   text-decoration: underline;
 }
 p {
-  font-family: "sans-serif", sans-serif;
+  font-family: "serif", serif;
   color: black;
 }
