--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,8 @@
 h1.Top-Header {
-  font-family: "Impact", Impact, sans-serif;
+  font-family: "Impact", Impact, serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
 }
 html {
   background-image: url("https://nerdnhub.github.io/NerdnHub/backgrounds/Main.png");
