--- a/style/style.css
+++ b/style/style.css
@@ -14,8 +14,8 @@ p {
   color: black;
 }
 .signInUp {
-  margin-left: 90%;
-  margin-bottom: 99%;
+  margin-left: 85%;
+  margin-bottom: 600px;
 }
 #motto {
   margin-left: 41%;
