--- a/style/style.css
+++ b/style/style.css
@@ -14,8 +14,7 @@ p {
   color: black;
 }
 .signInUp {
-  margin-left: 85%;
-  margin-bottom: 600px;
+  margin-left: 920px;
 }
 #motto {
   margin-left: 41%;
