--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,6 @@ p {
 .signInUp {
   margin-left: 870px;
 }
-.chipTabsIndex {
-// you will need to delete this, because this class affects two buttons putting them in the same spot, overlapping, ruining show //
-
+.middle {
+  margin-left: 435px;
 }
