--- a/style/style.css
+++ b/style/style.css
@@ -30,3 +30,4 @@ p {
 .chipTabsIndex {
   margin-top: 30px;
 }
+// Victor! Before you do any other code here, I really need you to look up, and research, how to fix something. Do you see where it says: ".signInUp { margin..."? Well, when I put that code there, for some reason, it moved itself down on the screen a little two. So all I need you to do is figure out how to put it in line with the other buttons, by inching it back up. Delete this when you are done //
